2005-11-05 Magnus Hagdorn
 * doc/Makefile.am: fix permissions
 * simple_forcing.f90: fix sign for temp gradient for moving margin, pointed
   out by Qinghua Yang

2005-11-04 Magnus Hagdorn
 * common/template.tex: new for generating eps files from gnuplot/xfig output
 * common/definitions.tex: new boolean for html code
 * common/packages.tex: use graphicx instead of epsfig
 * dg/dg.tex use includegraphics instead of epsfig
 * num/basal_bc.tex: ditto
 * num/grid.tex: ditto
 * num/kinematics.tex: ditto
 * num/vert_velo.tex: ditto
 * ug/glint.tex: ditto
 * ug/intro.tex: ditto
 * glimmer.tex.in: add code to autogenerate pngs for html output
 * make_doc.rules: changed rules so we can generate eps for all graphics
 * glimmer_html.tex: new master tex file for generating html output
 * Makefile.am: target for generating html output
 * num/figs/Makefile.am: generate eps
 * num/gnu/Makefile.am: ditto
 
2005-11-04 Magnus Hagdorn
 * configure.in: optionally build tools guide
 * doc/Makefile.am: use implicit rules
 * glimmer.tex.in: autogenerate glimmer.tex
 * tg*: structure for tools guide
 * packages.tex: use ifthenelse

2005-10-30 Magnus Hagdorn
 * glimmer_CFproj.f90: type definitions of individual projections are now
   public.
 * glimmer_config.f90: make the character array fixed length for gfortran.

2005-10-26 Magnus Hagdorn
 * eis_ela.f90: add longitudinal ELA gradient
 * glide_setup.f90: make fraction of ice lost due to calving a run
   time parameter
 * glide.f90: use calving parameter
 * glide_types.f90: add variables for calving paramter, ice volume and
   ice area calculations
 * glide_mask.f90: calculate ice volume and area
 * glide_vars.def: add ice volume and area variables
 * glide.tex: document calving parameter
 * drivers.tex: document longitudinal ELA gradient

2005-10-14 Magnus Hagdorn
 * glide_types.f90: add fields for some time averages
 * glide_vars.def: request time averages for ubas, vbas and bmlt